--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: skyblue;
+}
 header{
     background-image: url(../img/bg-sea\ \(1\).jpg);
     background-size: cover;    
@@ -44,4 +47,34 @@ nav ul{
     width: 800px;
     margin: 0 auto;
 
+}
+
+.container{
+    background-color: white;
+    width: 800px;
+    margin: 0 auto;
+    padding: 30px 30px 60px 30px;
+    box-sizing: border-box;
+    border-radius: 0px 0px 10px 10px ;
+}
+
+.profile{
+    padding: 0 20px;
+    line-height: 35px;
+}
+
+hr{
+    margin: 20px 0;
+}
+
+footer{
+    position: fixed;
+    bottom: 0;
+    background-color: darkcyan;
+    width: 100%;
+    text-align: center;
+    color: darkgray;
+    padding: 20px 0px;
+    font-size: 11px;
+       
 }
