--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,35 @@
 *{
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
+
 body{
     background-color: skyblue;
 }
 header{
     background-image: url(../img/bg-sea\ \(1\).jpg);
-    background-size: cover;    
+    background-size: cover;
+    
 }
+
 
 #icon{
     width: 150px;
-    border:  solid white;
-    border-radius: 10%;
-    margin: 40px 10px -30px 30px;
+    border: solid white;
+    border-radius: 10px;
+    margin:40px 10px -30px 30px;
 }
 
 #myname{
-   color: white;
-   font-size: 40px;
-   font-weight: bold;
-   text-shadow: 2px 2px 1px black;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    text-shadow: 2px 2px 1px black;
 }
 
 nav{
-background-color: darkcyan;    
-border-radius: 10px 10px 0px 0px;
+    background-color: darkcyan;
+    border-radius: 10px 10px 0px 0px;
 }
 
 nav ul li{
@@ -40,31 +43,30 @@ nav ul li a{
     font-weight: bold;
 }
 
-nav ul{
- text-align: center;
+nav ul {
+    text-align: center;
 }
+
 .top{
     width: 800px;
     margin: 0 auto;
-
 }
 
 .container{
     background-color: white;
     width: 800px;
     margin: 0 auto;
-    padding: 30px 30px 60px 30px;
-    box-sizing: border-box;
-    border-radius: 0px 0px 10px 10px ;
+  padding: 30px 30px 60px 30px;
+ box-sizing: border-box;
+ border-radius: 0px 0px 10px 10px;
 }
-
 .profile{
     padding: 0 20px;
     line-height: 35px;
 }
 
 hr{
-    margin: 20px 0;
+    margin: 20px 0px;
 }
 
 footer{
@@ -74,7 +76,6 @@ footer{
     width: 100%;
     text-align: center;
     color: darkgray;
-    padding: 20px 0px;
+    padding: 20px 0;
     font-size: 11px;
-       
 }
