--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,33 @@
 *{
-    padding: 0;
-    margin: 0 ;
-    
+  margin: 0;
+  padding: 0;
 }
+
 body{
   background-color: skyblue;
 }
 header{
-  background-image: url(../img/bg-sea\ \(1\).jpg);
-  background-size: cover;
+  background-image: url(../img/bg-sea.jpg);
+  background-size: cover; 
 }
 
 #icon{
-    width: 150px;
-    border: solid white;
-    border-radius: 10px;
-    margin: 40px 10px -30px 30px;
-}
+  width: 150px;
+  border: solid white;
+  border-radius: 10%;
+  margin: 40px 10px -30px  30px;
+  }
 
-#myname{
-  color: white;
-  font-size: 40px;
-  font-weight: bold;
-  text-shadow: 2px 2px 1px black ;
-}
+  #myname{
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    text-shadow: 2px 2px 1px black ;
+  }
 
 nav{
-  background-color: darkcyan;
-  border-radius: 10px 10px 0px 0px;
+  background-color: darkcyan; 
+  border-radius: 10px 10px 0px 0px ;
 }
 
 nav ul li{
@@ -35,19 +35,19 @@ nav ul li{
   margin: 0 15px;
 }
 
-nav ul li a {
+nav ul li a{
   text-decoration: none;
   color: black;
   font-weight: bold;
 }
 
-nav ul{ 
+nav ul{
   text-align: center;
 }
 
 .top{
-  width: 800px;
-  margin: 0 auto;
+width: 800px;
+margin: 0 auto;
 }
 
 .container{
@@ -55,25 +55,25 @@ nav ul{
   width: 800px;
   margin: 0 auto;
   padding: 30px 30px 60px 30px ;
-  box-sizing: border-box;
   border-radius: 0px 0px 10px 10px ;
+  box-sizing: border-box;
 }
 
 .profile{
-  padding: 0 20px;
   line-height: 35px;
 }
- hr{
-  margin: 20px 0px ;
- }
 
- footer{
+hr{
+  margin: 20px 0;
+}
+
+footer{
   position: fixed;
-  bottom: 0;
   width: 100%;
+  bottom: 0;
   background-color: darkcyan;
-  text-align: center;
-  font-size: 11px;
-  color: darkgray;
-  padding: 20px 0;
- }
+text-align: center;
+font-size:11px ;
+color: darkgray;
+padding: 20px 0;  
+}
