--- a/css/style.css
+++ b/css/style.css
@@ -3,31 +3,26 @@
   padding: 0;
 }
 
-body{
-  background-color: skyblue;
-}
 header{
-  background-image: url(../img/bg-sea.jpg);
-  background-size: cover; 
+  background-image: url(../img/bg-sea\ \(1\).jpg);
+  background-size: cover;
 }
 
 #icon{
   width: 150px;
   border: solid white;
-  border-radius: 10%;
-  margin: 40px 10px -30px  30px;
-  }
+  border-radius: 10px;
+}
 
-  #myname{
-    color: white;
-    font-size: 40px;
-    font-weight: bold;
-    text-shadow: 2px 2px 1px black ;
-  }
+#myname{
+ color: white;
+ font-size: 40px;
+ font-weight: bold;
+ text-shadow: 2px 2px 1px black;
+}
 
 nav{
-  background-color: darkcyan; 
-  border-radius: 10px 10px 0px 0px ;
+  background-color: darkcyan;
 }
 
 nav ul li{
@@ -35,45 +30,3 @@ nav ul li{
   margin: 0 15px;
 }
 
-nav ul li a{
-  text-decoration: none;
-  color: black;
-  font-weight: bold;
-}
-
-nav ul{
-  text-align: center;
-}
-
-.top{
-width: 800px;
-margin: 0 auto;
-}
-
-.container{
-  background-color: white;
-  width: 800px;
-  margin: 0 auto;
-  padding: 30px 30px 60px 30px ;
-  border-radius: 0px 0px 10px 10px ;
-  box-sizing: border-box;
-}
-
-.profile{
-  line-height: 35px;
-}
-
-hr{
-  margin: 20px 0;
-}
-
-footer{
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  background-color: darkcyan;
-text-align: center;
-font-size:11px ;
-color: darkgray;
-padding: 20px 0;  
-}
