--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
   padding: 0;
 }
 
+body{
+  background-color: skyblue;
+}
 header{
   background-image: url(../img/bg-sea\ \(1\).jpg);
   background-size: cover;
@@ -12,6 +15,7 @@ header{
   width: 150px;
   border: solid white;
   border-radius: 10px;
+  margin: 40px 10px -30px 30px; 
 }
 
 #myname{
@@ -23,6 +27,7 @@ header{
 
 nav{
   background-color: darkcyan;
+    border-radius: 10px 10px 0 0;
 }
 
 nav ul li{
@@ -30,3 +35,44 @@ nav ul li{
   margin: 0 15px;
 }
 
+nav ul li a{
+   font-weight: bold;
+  color: black;
+  text-decoration: none;
+}
+
+nav ul{
+text-align: center;
+}
+.top{
+  width: 800px;
+  margin: 0 auto;
+}
+
+.container{
+width: 800px;
+background-color: white;
+margin: 0 auto;
+padding: 30px 30xp 60px 30px ;
+border-radius: 0px 0px 10px 10px ;
+}
+
+.profile{
+  padding: 0 20px;
+  line-height: 35px;
+}
+
+hr{
+  margin: 20px 0px;
+}
+
+footer{
+  position: fixed;
+  bottom: 0;
+  background-color: darkcyan;
+  width: 100%;
+  text-align: center;
+  color: darkgrey;
+  font-size: 11px;
+  padding: 20px 0;
+}
